Transform CTFd Theme to Modern Elegant Design

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,14 +11,14 @@
     <link rel="stylesheet" href="{{ url_for('views.themes', path='css/main.css') }}">
     <link rel="stylesheet" href="{{ url_for('views.themes', path='css/core.css') }}">
     
-    <!-- Cyberneon styling -->
-    <link rel="stylesheet" href="{{ url_for('views.themes', path='css/cyberneon.min.css') }}">
+    <!-- Modern Elegant styling -->
+    <link rel="stylesheet" href="{{ url_for('views.themes', path='css/modern-elegant.min.css') }}">
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;400;600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
     
     {% block stylesheets %}{% endblock %}
     
@@ -36,14 +36,7 @@
     </script>
     {{ Configs.theme_header }}
 </head>
-<body class="cyber-body">
-    <!-- Animated Background -->
-    <div class="cyber-bg">
-        <div class="particle-network"></div>
-        <div class="grid-overlay"></div>
-        <div class="neural-connections"></div>
-        <div class="floating-particles"></div>
-    </div>
+<body class="modern-body">
     
     {% include "components/navbar.html" %}
 
@@ -55,20 +48,16 @@
 
     <!-- Footer -->
     <footer class="cyber-footer">
-        <div class="footer-container">
+        <div class="container">
             <div class="footer-text">
-                <span class="scoreboard-neon-title">{{ Configs.ctf_name }}</span>
-                <span class="footer-separator">|</span>
-                <a href="https://icims.com" class="text-secondary">
-                    <span>2025</span>
-                </a>
+                <span>{{ Configs.ctf_name }}</span>
+                <span> | </span>
+                <span>2025</span>
             </div>
         </div>
     </footer>
 
     <!-- JavaScript -->
-    <script src="{{ url_for('views.themes', path='js/cyberneon.min.js') }}"></script>
-    
     <script defer src="{{ url_for('views.themes', path='js/vendor.bundle.js') }}"></script>
     <script defer src="{{ url_for('views.themes', path='js/core.js') }}"></script>
     <script defer src="{{ url_for('views.themes', path='js/helpers.js') }}"></script>
