--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="challenges-container">
     <div class="page-header">
-        <h1 class="scoreboard-neon-title" data-text="CHALLENGES">CHALLENGES</h1>
+        <h1>Challenges</h1>
         <div class="header-line"></div>
     </div>
 
