--- a/templates/login.html
+++ b/templates/login.html
@@ -4,44 +4,54 @@
 {% endblock %}
 
 {% block content %}
-<div class="jumbotron">
-	<div class="container">
-		<h1>Login</h1>
-	</div>
-</div>
-<div class="container">
-	<div class="row">
-		<div class="col-md-6 offset-md-3">
+<div class="auth-container">
+	<div class="auth-panel">
+		<div class="text-center mb-4">
+			<div class="feature-icon mx-auto mb-3" style="width: 60px; height: 60px;">
+				<i class="fas fa-shield-alt"></i>
+			</div>
+			<h2>Welcome Back</h2>
+			<p class="text-secondary">Sign in to access the CTF platform</p>
+		</div>
+		
+		<div>
 			{% include "components/errors.html" %}
 
 			{% if integrations.mlc() %}
-			<a class="btn btn-secondary btn-lg btn-block" href="{{ url_for('auth.oauth_login') }}">
+			<a class="btn btn-secondary btn-block mb-3" href="{{ url_for('auth.oauth_login') }}">
 				Login with Major League Cyber
 			</a>
-
-			<hr>
+			<div class="text-center my-4">
+				<span class="text-muted">or</span>
+			</div>
 			{% endif %}
 
 			{% with form = Forms.auth.LoginForm() %}
 			<form method="post" accept-charset="utf-8" autocomplete="off">
 				<div class="form-group">
-					<b>{{ form.name.label }}</b>
+					<label>{{ form.name.label }}</label>
 					{{ form.name(class="form-control", value=name) }}
 				</div>
 				<div class="form-group">
-					<b>{{ form.password.label }}</b>
+					<label>{{ form.password.label }}</label>
 					{{ form.password(class="form-control", value=password) }}
 				</div>
-				<div class="row pt-3">
-					<div class="col-md-6">
-						<a class="float-left align-text-to-button" href="{{ url_for('auth.reset_password') }}">
-							Forgot your password?
-						</a>
-					</div>
-					<div class="col-md-6">
-						{{ form.submit(class="btn btn-md btn-primary btn-outlined float-right") }}
-					</div>
+				
+				{{ form.submit(class="btn btn-primary btn-block mb-3") }}
+				
+				<div class="text-center">
+					<a href="{{ url_for('auth.reset_password') }}" class="text-secondary">
+						Forgot your password?
+					</a>
 				</div>
+				
+				{% if registration_visible() %}
+				<div class="text-center mt-4 pt-4" style="border-top: 1px solid var(--border);">
+					<span class="text-secondary">Don't have an account? </span>
+					<a href="{{ url_for('auth.register') }}" class="text-decoration-none" style="color: var(--accent-teal);">Create one here</a>
+				</div>
+				{% endif %}
+				
 				{{ form.nonce() }}
 			</form>
 			{% endwith %}
