--- a/templates/scoreboard.html
+++ b/templates/scoreboard.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="scoreboard-container">
     <div class="page-header">
-        <h1 class="scoreboard-neon-title" data-text="SCOREBOARD">SCOREBOARD</h1>
+        <h1>Scoreboard</h1>
         <div class="header-line"></div>
     </div>
 </div>
