--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,11 +1,11 @@
 <!-- Navigation Component -->
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top cyber-navbar">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top">
     <div class="container">
-        <a href="{{ url_for('views.static_html', route='/') }}" class="navbar-brand brand-link">
+        <a href="{{ url_for('views.static_html', route='/') }}" class="navbar-brand">
             {% if Configs.ctf_logo %}
                 <img class="img-responsive ctf_logo" src="{{ url_for('views.files', path=Configs.ctf_logo) }}" height="25" alt="{{ Configs.ctf_name }}">
             {% else %}
-                <span class="cyber-logo glitch-text" data-text="{{ Configs.ctf_name }}">{{ Configs.ctf_name }}</span>
+                {{ Configs.ctf_name }}
             {% endif %}
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#base-navbars"
@@ -73,12 +73,8 @@
                     {% if Configs.user_mode == "teams" %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('teams.private') }}">
-                            <span class="d-block" data-toggle="tooltip" data-placement="bottom" title="Team">
-                                <i class="fas fa-users d-none d-md-block d-lg-none"></i>
-                            </span>
-                            <span class="d-sm-block d-md-none d-lg-block">
-                                <i class="fas fa-users pr-1"></i>Team
-                            </span>
+                            <i class="fas fa-user-plus d-none d-md-inline d-lg-none"></i>
+                            <span class="d-md-none d-lg-inline">Register</span>
                         </a>
                     </li>
                     {% endif %}
@@ -127,12 +123,8 @@
                     {% endif %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('auth.login') }}">
-                            <span class="d-block" data-toggle="tooltip" data-placement="bottom" title="Login">
-                                <i class="fas fa-sign-in-alt d-none d-md-block d-lg-none"></i>
-                            </span>
-                            <span class="d-sm-block d-md-none d-lg-block">
-                                <i class="fas fa-sign-in-alt pr-1"></i>Login
-                            </span>
+                            <i class="fas fa-sign-in-alt d-none d-md-inline d-lg-none"></i>
+                            <span class="d-md-none d-lg-inline">Login</span>
                         </a>
                     </li>
                 {% endif %}
